--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ body {
   background-color: var(--primary-bg);
   color: var(--text-primary);
   line-height: 1.6;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
+  overscroll-behavior: none;
 }
 
 code {
